# mxl

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: backports.yml  rust.yml
docs/: Building.md
examples/: README.md  test.yaml
lib/: CMakeLists.txt
lib/cmake/: mxl-config.cmake.in
lib/include/mxl/: version.h.in
lib/internal/: CMakeLists.txt
lib/internal/include/mxl-internal/: DomainWatcher.hpp  FlowReader.hpp  FlowWriter.hpp
lib/internal/src/: DomainWatcher.cpp  FlowReader.cpp  FlowWriter.cpp  PosixContinuousFlowReader.cpp  PosixContinuousFlowWriter.cpp  PosixDiscreteFlowWriter.cpp
lib/internal/tests/: test_domainwatcher.cpp
lib/src/: mxl.cpp
lib/src/internal/: Instance.cpp  PosixDiscreteFlowReader.cpp
lib/tests/: test_flows_timing.cpp  test_instance.cpp  test_pkgconfig_c_link.sh
rust/mxl/examples/: flow-delayer.rs  flow-reader.rs  flow-writer.rs
rust/mxl/src/: api.rs  flow.rs  instance.rs  samples_write_access.rs
rust/mxl/src/flow/: reader.rs  writer.rs
rust/mxl/src/grain/: reader.rs  write_access.rs  writer.rs
rust/mxl/src/samples/: data.rs  reader.rs  write_access.rs  writer.rs
rust/mxl/tests/: basic_tests.rs
tools/mxl-gst/: sink.cpp
